# show-forecasts

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  sample.env  start-jupyter.sh  start-mercury.sh  test_GAN_forecast.ipynb  test_load_IFS_openData.ipynb  welcome.md
cgan_ui/: constants.py  data_utils.py  download.py  ecmwf_esm_viz.py  enums.py  jobs.py  show_cgan.py  show_forecasts.py  utils.py
cgan_ui/fork/: data_utils.py  show_IFS_open_data.py  show_cGAN.py
docker/jobs/: Dockerfile  entrypoint.sh
docker/lab/: Dockerfile
docker/nginx/: Dockerfile  default.conf
docker/webapp/: Dockerfile  entrypoint.sh
notebooks/: explore_ecmwf_data.ipynb  load_IFS_openData.ipynb  test_GAN_forecast.ipynb  test_load_IFS_openData.ipynb
shapefiles/: Burundi.dbf  Djibouti.dbf  East Africa.dbf  East Africa.shx  Eritrea.dbf  Ethiopia.dbf  Ethiopia.qix  Ethiopia.shp  Ethiopia.shx  Kenya.dbf  Kenya.shp  Kenya.shx  Rwanda.dbf  Somalia.dbf  South Sudan.dbf  Sudan.dbf  Sudan.shp  Sudan.shx  Tanzania.dbf  Tanzania.shp  Tanzania.shx  Uganda.dbf
show_forecasts/: constants.py  data_utils.py  show_IFS_open_data.py  show_cGAN.py
show_forecasts/.ipynb_checkpoints/: show_forecasts-checkpoint.py
show_forecasts/GHA_shapes/: gha.shp.xml
show_forecasts/shapes/Kenya_shapes/: Kenya_region.dbf  Kenya_region.shp  Kenya_region.shx
webapps/: cgan-forecasts.ipynb  ecmwf-ensemble-visualization.ipynb  load-ifs-opendata.ipynb  locations-picker-web-map.ipynb  test-cgan-forecasts.ipynb
